# fastcontract_app

./: .gitignore
.devcontainer/: devcontainer.json
srcs/: app.py  pyproject.toml
srcs/srcs/: .env  app.py
